--- a/Group Project 1 Data Somms/Data_Somms_Main.ipynb
+++ b/Group Project 1 Data Somms/Data_Somms_Main.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Storing our Data World Wine filepath in a variable\n",
-    "data_world_wines = \"C:/Users/dbruen/Documents/Data Analytics/CU Bootcamp Homework/Group Porject 1 Data Somms/DataWorldWines.csv\""
+    "data_world_wines = \"DataWorldWines.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4          Grard Bertrand  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
