--- a/Group Project 1 Data Somms/Data_Somms_Main.ipynb
+++ b/Group Project 1 Data Somms/Data_Somms_Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Storing our Data World Wine filepath in a variable\n",
-    "data_world_wines = \"DataWorldWines.csv\""
+    "data_world_wines = \"C:/Users/dbruen/Documents/Data Analytics/CU Bootcamp Homework/Group Porject 1 Data Somms/DataWorldWines.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -158,7 +160,7 @@
        "4          Grard Bertrand  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,319 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1/1/2013    3138\n",
-       "1/1/2014    3114\n",
-       "1/1/2012    3083\n",
-       "1/1/2011    2509\n",
-       "1/1/2010    2470\n",
-       "1/1/2015    1999\n",
-       "1/1/2009    1967\n",
-       "1/1/2008    1457\n",
-       "1/1/2007    1447\n",
-       "1/1/2006    1141\n",
-       "1/1/2005     738\n",
-       "1/1/2016     728\n",
-       "1/1/2004     352\n",
-       "1/1/2000     155\n",
-       "1/1/2001     146\n",
-       "1/1/1999     128\n",
-       "1/1/2003     126\n",
-       "1/1/1998     109\n",
-       "1/1/2002      79\n",
-       "1/1/1997      57\n",
-       "1/1/1996      15\n",
-       "1/1/1995      12\n",
-       "1/1/1994       4\n",
-       "1/1/1992       3\n",
-       "1/1/1989       2\n",
-       "1/1/1929       2\n",
-       "1/1/1993       1\n",
-       "1/1/1980       1\n",
-       "1/1/1987       1\n",
-       "1/1/1919       1\n",
-       "1/1/1872       1\n",
-       "1/1/1974       1\n",
-       "1/1/1990       1\n",
-       "1/1/1821       1\n",
-       "1/1/1984       1\n",
-       "1/1/1991       1\n",
-       "1/1/1952       1\n",
-       "1/1/1827       1\n",
-       "1/1/1963       1\n",
-       "1/1/1945       1\n",
-       "1/1/1934       1\n",
-       "1/1/1978       1\n",
-       "Name: Vintage, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Summary Data\n",
-    "## By Vintage - number of wines per Vintage\n",
-    "data_world_wines_df[\"Vintage\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Points</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vintage</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1/1/1821</td>\n",
-       "      <td>86.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1827</td>\n",
-       "      <td>94.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1872</td>\n",
-       "      <td>85.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1919</td>\n",
-       "      <td>88.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1929</td>\n",
-       "      <td>85.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1934</td>\n",
-       "      <td>93.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1945</td>\n",
-       "      <td>95.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1952</td>\n",
-       "      <td>96.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1963</td>\n",
-       "      <td>96.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1974</td>\n",
-       "      <td>93.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1978</td>\n",
-       "      <td>94.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1980</td>\n",
-       "      <td>93.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1984</td>\n",
-       "      <td>94.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1987</td>\n",
-       "      <td>89.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1989</td>\n",
-       "      <td>92.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1990</td>\n",
-       "      <td>90.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1991</td>\n",
-       "      <td>93.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1992</td>\n",
-       "      <td>90.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1993</td>\n",
-       "      <td>86.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1994</td>\n",
-       "      <td>88.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1995</td>\n",
-       "      <td>88.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1996</td>\n",
-       "      <td>88.066667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1997</td>\n",
-       "      <td>89.456140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1998</td>\n",
-       "      <td>87.256881</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/1999</td>\n",
-       "      <td>87.835938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2000</td>\n",
-       "      <td>87.322581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2001</td>\n",
-       "      <td>87.321918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2002</td>\n",
-       "      <td>86.835443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2003</td>\n",
-       "      <td>88.238095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2004</td>\n",
-       "      <td>88.659091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2005</td>\n",
-       "      <td>88.403794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2006</td>\n",
-       "      <td>88.333041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2007</td>\n",
-       "      <td>88.129233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2008</td>\n",
-       "      <td>88.260124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2009</td>\n",
-       "      <td>88.329944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2010</td>\n",
-       "      <td>88.253036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2011</td>\n",
-       "      <td>88.144679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2012</td>\n",
-       "      <td>88.755433</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2013</td>\n",
-       "      <td>89.015615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2014</td>\n",
-       "      <td>88.896275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2015</td>\n",
-       "      <td>88.572286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/1/2016</td>\n",
-       "      <td>87.737637</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             Points\n",
-       "Vintage            \n",
-       "1/1/1821  86.000000\n",
-       "1/1/1827  94.000000\n",
-       "1/1/1872  85.000000\n",
-       "1/1/1919  88.000000\n",
-       "1/1/1929  85.500000\n",
-       "1/1/1934  93.000000\n",
-       "1/1/1945  95.000000\n",
-       "1/1/1952  96.000000\n",
-       "1/1/1963  96.000000\n",
-       "1/1/1974  93.000000\n",
-       "1/1/1978  94.000000\n",
-       "1/1/1980  93.000000\n",
-       "1/1/1984  94.000000\n",
-       "1/1/1987  89.000000\n",
-       "1/1/1989  92.000000\n",
-       "1/1/1990  90.000000\n",
-       "1/1/1991  93.000000\n",
-       "1/1/1992  90.333333\n",
-       "1/1/1993  86.000000\n",
-       "1/1/1994  88.250000\n",
-       "1/1/1995  88.250000\n",
-       "1/1/1996  88.066667\n",
-       "1/1/1997  89.456140\n",
-       "1/1/1998  87.256881\n",
-       "1/1/1999  87.835938\n",
-       "1/1/2000  87.322581\n",
-       "1/1/2001  87.321918\n",
-       "1/1/2002  86.835443\n",
-       "1/1/2003  88.238095\n",
-       "1/1/2004  88.659091\n",
-       "1/1/2005  88.403794\n",
-       "1/1/2006  88.333041\n",
-       "1/1/2007  88.129233\n",
-       "1/1/2008  88.260124\n",
-       "1/1/2009  88.329944\n",
-       "1/1/2010  88.253036\n",
-       "1/1/2011  88.144679\n",
-       "1/1/2012  88.755433\n",
-       "1/1/2013  89.015615\n",
-       "1/1/2014  88.896275\n",
-       "1/1/2015  88.572286\n",
-       "1/1/2016  87.737637"
+       "Country\n",
+       "Argentina    86.767105\n",
+       "Australia    88.660215\n",
+       "Austria      90.197977\n",
+       "Brazil       83.888889\n",
+       "Bulgaria     87.709677\n",
+       "Name: Points, dtype: float64"
       ]
      },
      "execution_count": 9,
@@ -492,8 +194,93 @@
     }
    ],
    "source": [
-    "## Average Points per Vintage\n",
-    "data_world_wines_df.groupby(\"Vintage\").mean()"
+    "# Average Points by Country\n",
+    "avg_pt_country = data_world_wines_df.groupby([\"Country\"])[\"Points\"].mean()\n",
+    "avg_pt_country.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Province\n",
+       "Achaia              88.000000\n",
+       "Aconcagua Costa     87.333333\n",
+       "Aconcagua Valley    88.000000\n",
+       "Aegean              88.800000\n",
+       "Agioritikos         87.000000\n",
+       "Name: Points, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average Points by Province\n",
+    "avg_pt_province = data_world_wines_df.groupby([\"Province\"])[\"Points\"].mean()\n",
+    "avg_pt_province.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vintage\n",
+       "1/1/1821    86.0\n",
+       "1/1/1827    94.0\n",
+       "1/1/1872    85.0\n",
+       "1/1/1919    88.0\n",
+       "1/1/1929    85.5\n",
+       "Name: Points, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average Points per Vintage\n",
+    "avg_pt_vintage = data_world_wines_df.groupby([\"Vintage\"])[\"Points\"].mean()\n",
+    "avg_pt_vintage.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variety\n",
+       "Agiorgitiko    86.625000\n",
+       "Aglianico      89.152778\n",
+       "Albana         88.888889\n",
+       "Albari¤o       87.978495\n",
+       "Aleatico       89.000000\n",
+       "Name: Points, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average Points by Variety (grape)\n",
+    "avg_pt_variety = data_world_wines_df.groupby([\"Variety\"])[\"Points\"].mean()\n",
+    "avg_pt_variety.head()"
    ]
   },
   {
@@ -503,98 +290,14 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Points</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Variety</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>Agiorgitiko</td>\n",
-       "      <td>86.625000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Aglianico</td>\n",
-       "      <td>89.152778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Albana</td>\n",
-       "      <td>88.888889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Albari¤o</td>\n",
-       "      <td>87.978495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Aleatico</td>\n",
-       "      <td>89.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Zierfandler-Rotgipfler</td>\n",
-       "      <td>90.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Zinfandel</td>\n",
-       "      <td>87.810445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Zlahtina</td>\n",
-       "      <td>84.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Zweigelt</td>\n",
-       "      <td>88.479167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>«ilavka</td>\n",
-       "      <td>88.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>450 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                           Points\n",
-       "Variety                          \n",
-       "Agiorgitiko             86.625000\n",
-       "Aglianico               89.152778\n",
-       "Albana                  88.888889\n",
-       "Albari¤o                87.978495\n",
-       "Aleatico                89.000000\n",
-       "...                           ...\n",
-       "Zierfandler-Rotgipfler  90.666667\n",
-       "Zinfandel               87.810445\n",
-       "Zlahtina                84.000000\n",
-       "Zweigelt                88.479167\n",
-       "«ilavka                88.000000\n",
-       "\n",
-       "[450 rows x 1 columns]"
+       "Designation\n",
+       "\"Champ\" Lightnin' Lane    81.0\n",
+       "#50 Mon Chou              88.0\n",
+       "%@#$!                     90.0\n",
+       "&                         88.0\n",
+       "'Blend 105' Red Wine      89.0\n",
+       "Name: Points, dtype: float64"
       ]
      },
      "execution_count": 10,
@@ -603,9 +306,24 @@
     }
    ],
    "source": [
-    "# Avg Points by Variety/Grape\n",
-    "data_world_wines_df.groupby(\"Variety\").mean()"
+    "# Average Points by Designation (wine type)\n",
+    "avg_pt_des = data_world_wines_df.groupby([\"Designation\"])[\"Points\"].mean()\n",
+    "avg_pt_des.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
